--- a/locales/ja/app.json
+++ b/locales/ja/app.json
@@ -1,5 +1,6 @@
 {
   "lang": "日本語",
+  "sponsor": "Noiをスポンサーする",
   "menu": {
     "name": "メニュー",
     "about": "Noiについて",
@@ -79,7 +80,8 @@
   "sidebar": {
     "warn": {
       "url_delete": "現在のURLは削除できません。",
-      "dir_delete": "現在のURLのディレクトリは削除できません。"
+      "dir_delete": "現在のURLのディレクトリは削除できません。",
+      "tray_delete": "現在のURLはシステムトレイとして設定されています。まず設定を解除してください。"
     },
     "tip": {
       "delete": "削除後は復元できません。本当に削除しますか？"
