--- a/locales/ru/app.json
+++ b/locales/ru/app.json
@@ -1,5 +1,6 @@
 {
   "lang": "Русский",
+  "sponsor": "Спонсировать Noi",
   "menu": {
     "name": "Меню",
     "about": "О Noi",
@@ -79,7 +80,8 @@
   "sidebar": {
     "warn": {
       "url_delete": "Текущий URL не может быть удален.",
-      "dir_delete": "Директория текущего URL не может быть удалена."
+      "dir_delete": "Директория текущего URL не может быть удалена.",
+      "tray_delete": "Текущий URL установлен как системный трей, пожалуйста, сначала отмените настройку."
     },
     "tip": {
       "delete": "После удаления восстановление невозможно, вы уверены, что хотите удалить?"
