--- a/locales/pt/app.json
+++ b/locales/pt/app.json
@@ -1,5 +1,6 @@
 {
   "lang": "Português",
+  "sponsor": "Patrocinar Noi",
   "menu": {
     "name": "Menu",
     "about": "Sobre o Noi",
@@ -79,7 +80,8 @@
   "sidebar": {
     "warn": {
       "url_delete": "A URL atual não pode ser excluída.",
-      "dir_delete": "O diretório da URL atual não pode ser excluído."
+      "dir_delete": "O diretório da URL atual não pode ser excluído.",
+      "tray_delete": "A URL atual está configurada como bandeja do sistema, por favor, cancele a configuração primeiro."
     },
     "tip": {
       "delete": "Uma vez excluído não pode ser recuperado, tem certeza que deseja excluir?"
