--- a/locales/ja/app.json
+++ b/locales/ja/app.json
@@ -22,6 +22,8 @@
     "showSidebar": "サイドバーを表示",
     "hideSidebar": "サイドバーを隠す",
     "devTools": "開発者ツール",
+    "frosted_texture": "霜降りテクスチャ",
+    "x_quit": "[X]をクリックして終了",
 
     "edit": "編集",
     "undo": "元に戻す",
@@ -84,7 +86,11 @@
       "tray_delete": "現在のURLはシステムトレイとして設定されています。まず設定を解除してください。"
     },
     "tip": {
-      "delete": "削除後は復元できません。本当に削除しますか？"
+      "delete": "削除後は復元できません。本当に削除しますか？",
+      "sync_overwrite": "同期はカスタムデータを除くすべてのデータを上書きします。続行しますか？",
+      "sync_reset": "現在、最新バージョンを使用中です。同期によりカスタムデータを除くすべてのデータがリセットされます。続行しますか？",
+      "sync_ok": "同期成功",
+      "sync_reset_ok": "リセット成功"
     }
   }
 }
