--- a/locales/ru/app.json
+++ b/locales/ru/app.json
@@ -22,6 +22,8 @@
     "showSidebar": "Показать боковую панель",
     "hideSidebar": "Скрыть боковую панель",
     "devTools": "Инструменты разработчика",
+    "frosted_texture": "Матовая текстура",
+    "x_quit": "Нажмите [X], чтобы выйти",
 
     "edit": "Редактировать",
     "undo": "Отменить",
@@ -84,7 +86,11 @@
       "tray_delete": "Текущий URL установлен как системный трей, пожалуйста, сначала отмените настройку."
     },
     "tip": {
-      "delete": "После удаления восстановление невозможно, вы уверены, что хотите удалить?"
+      "delete": "После удаления восстановление невозможно, вы уверены, что хотите удалить?",
+      "sync_overwrite": "Синхронизация перезапишет все данные, кроме пользовательских. Продолжить?",
+      "sync_reset": "Вы уже используете последнюю версию. Синхронизация сбросит все данные, кроме пользовательских. Продолжить?",
+      "sync_ok": "Синхронизация успешна",
+      "sync_reset_ok": "Сброс успешен"
     }
   }
 }
