--- a/locales/ko/app.json
+++ b/locales/ko/app.json
@@ -22,6 +22,8 @@
     "showSidebar": "사이드바 보기",
     "hideSidebar": "사이드바 숨기기",
     "devTools": "개발자 도구",
+    "frosted_texture": "프로스티드 텍스쳐",
+    "x_quit": "[X] 클릭하여 종료",
 
     "edit": "편집",
     "undo": "실행 취소",
@@ -84,7 +86,11 @@
       "tray_delete": "현재 URL은 시스템 트레이로 설정되어 있습니다. 먼저 설정을 취소해 주세요."
     },
     "tip": {
-      "delete": "삭제 후 복구할 수 없습니다. 정말 삭제하시겠습니까?"
+      "delete": "삭제 후 복구할 수 없습니다. 정말 삭제하시겠습니까?",
+      "sync_overwrite": "동기화는 사용자 정의 데이터를 제외한 모든 데이터를 덮어씁니다. 계속하시겠습니까?",
+      "sync_reset": "현재 최신 버전을 사용 중입니다. 동기화는 사용자 정의 데이터를 제외한 모든 데이터를 초기화합니다. 계속하시겠습니까?",
+      "sync_ok": "동기화 성공",
+      "sync_reset_ok": "초기화 성공"
     }
   }
 }
