--- a/locales/ja/app.json
+++ b/locales/ja/app.json
@@ -92,5 +92,14 @@
       "sync_ok": "同期成功",
       "sync_reset_ok": "リセット成功"
     }
+  },
+  "network": {
+    "error": {
+      "title": "このサイトにアクセスできません",
+      "long_respond": "の応答に時間がかかりすぎます。",
+      "try": "試してみてください：",
+      "check_1": "接続を確認する",
+      "check_2": "プロキシとファイアウォールを確認する"
+    }
   }
 }
