--- a/locales/ru/app.json
+++ b/locales/ru/app.json
@@ -92,5 +92,14 @@
       "sync_ok": "Синхронизация успешна",
       "sync_reset_ok": "Сброс успешен"
     }
+  },
+  "network": {
+    "error": {
+      "title": "Сайт недоступен",
+      "long_respond": "слишком долго отвечает.",
+      "try": "Попробуйте:",
+      "check_1": "Проверить соединение",
+      "check_2": "Проверить прокси и фаервол"
+    }
   }
 }
