--- a/locales/ko/app.json
+++ b/locales/ko/app.json
@@ -92,5 +92,14 @@
       "sync_ok": "동기화 성공",
       "sync_reset_ok": "초기화 성공"
     }
+  },
+  "network": {
+    "error": {
+      "title": "이 사이트에 연결할 수 없음",
+      "long_respond": "응답하는 데 시간이 너무 오래 걸림.",
+      "try": "시도:",
+      "check_1": "연결 확인",
+      "check_2": "프록시 및 방화벽 확인"
+    }
   }
 }
